cleaned solar hourly data again
changes made: drop 2022 rows so just pull from 23-24, use forecasts from 24 hours before instead of latest

--- a/notebooks/fetch_and_clean_solar_data.ipynb
+++ b/notebooks/fetch_and_clean_solar_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "975762d8-59c0-487f-b58d-4b290dd29808",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "684c3d3c-eece-401a-9039-e0dfde09f111",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "507410a8-2180-49a2-b10d-3034927f2daa",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(21958, 26)\n"
+      "(17520, 26)\n"
      ]
     },
     {
@@ -87,122 +87,122 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2022-06-30 00:00:00-05:00</td>\n",
+       "      <td>2023-01-01 00:00:00-06:00</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.10</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.1</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2022-06-30 01:00:00-05:00</td>\n",
+       "      <td>2023-01-01 01:00:00-06:00</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.10</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.1</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2022-06-30 02:00:00-05:00</td>\n",
+       "      <td>2023-01-01 02:00:00-06:00</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.10</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.1</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2022-06-30 03:00:00-05:00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>2023-01-01 03:00:00-06:00</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2022-06-30 04:00:00-05:00</td>\n",
+       "      <td>2023-01-01 04:00:00-06:00</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.10</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.1</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -212,39 +212,39 @@
       ],
       "text/plain": [
        "       interval_start_local  pvgrpp_system_wide  stppf_system_wide  \\\n",
-       "0 2022-06-30 00:00:00-05:00                 0.0                0.0   \n",
-       "1 2022-06-30 01:00:00-05:00                 0.0                0.0   \n",
-       "2 2022-06-30 02:00:00-05:00                 0.0                0.0   \n",
-       "3 2022-06-30 03:00:00-05:00                 0.0                0.0   \n",
-       "4 2022-06-30 04:00:00-05:00                 0.0                0.0   \n",
+       "0 2023-01-01 00:00:00-06:00                 0.0                0.0   \n",
+       "1 2023-01-01 01:00:00-06:00                 0.0                0.0   \n",
+       "2 2023-01-01 02:00:00-06:00                 0.0                0.0   \n",
+       "3 2023-01-01 03:00:00-06:00                 0.0                0.0   \n",
+       "4 2023-01-01 04:00:00-06:00                 0.0                0.0   \n",
        "\n",
        "   cop_hsl_system_wide  gen_system_wide  pvgrpp_centerwest  stppf_centerwest  \\\n",
-       "0                  0.0             0.10                0.0               0.0   \n",
-       "1                  0.0             0.10                0.0               0.0   \n",
-       "2                  0.0             0.10                0.0               0.0   \n",
-       "3                  0.0             0.11                0.0               0.0   \n",
-       "4                  0.0             0.10                0.0               0.0   \n",
+       "0                  0.0              NaN                0.0               0.0   \n",
+       "1                  0.0              NaN                0.0               0.0   \n",
+       "2                  0.0              NaN                0.0               0.0   \n",
+       "3                  0.0              NaN                0.0               0.0   \n",
+       "4                  0.0              NaN                0.0               0.0   \n",
        "\n",
        "   cop_hsl_centerwest  gen_centerwest  pvgrpp_northwest  ...  gen_fareast  \\\n",
-       "0                 0.0             0.0               0.0  ...          0.1   \n",
-       "1                 0.0             0.0               0.0  ...          0.1   \n",
-       "2                 0.0             0.0               0.0  ...          0.1   \n",
-       "3                 0.0             0.0               0.0  ...          0.1   \n",
-       "4                 0.0             0.0               0.0  ...          0.1   \n",
+       "0                 0.0             NaN               0.0  ...          NaN   \n",
+       "1                 0.0             NaN               0.0  ...          NaN   \n",
+       "2                 0.0             NaN               0.0  ...          NaN   \n",
+       "3                 0.0             NaN               0.0  ...          NaN   \n",
+       "4                 0.0             NaN               0.0  ...          NaN   \n",
        "\n",
        "   pvgrpp_southeast  stppf_southeast  cop_hsl_southeast  gen_southeast  \\\n",
-       "0               0.0              0.0                0.0            0.0   \n",
-       "1               0.0              0.0                0.0            0.0   \n",
-       "2               0.0              0.0                0.0            0.0   \n",
-       "3               0.0              0.0                0.0            0.0   \n",
-       "4               0.0              0.0                0.0            0.0   \n",
+       "0               0.0              0.0                0.0            NaN   \n",
+       "1               0.0              0.0                0.0            NaN   \n",
+       "2               0.0              0.0                0.0            NaN   \n",
+       "3               0.0              0.0                0.0            NaN   \n",
+       "4               0.0              0.0                0.0            NaN   \n",
        "\n",
        "   pvgrpp_centereast  stppf_centereast  cop_hsl_centereast  gen_centereast  \\\n",
-       "0                0.0               0.0                 0.0             0.0   \n",
-       "1                0.0               0.0                 0.0             0.0   \n",
-       "2                0.0               0.0                 0.0             0.0   \n",
-       "3                0.0               0.0                 0.0             0.0   \n",
-       "4                0.0               0.0                 0.0             0.0   \n",
+       "0                0.0               0.0                 0.0             NaN   \n",
+       "1                0.0               0.0                 0.0             NaN   \n",
+       "2                0.0               0.0                 0.0             NaN   \n",
+       "3                0.0               0.0                 0.0             NaN   \n",
+       "4                0.0               0.0                 0.0             NaN   \n",
        "\n",
        "   hsl_system_wide  \n",
        "0              NaN  \n",
@@ -256,7 +256,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,9 +267,11 @@
     "\n",
     "# Query parameters\n",
     "params = {\n",
-    "    \"start_time\": \"2022-06-30\",\n",
+    "    \"start_time\": \"2023-01-01\",\n",
     "    \"end_time\":   \"2024-12-31\",\n",
-    "    \"publish_time\": \"latest\",\n",
+    "    # for each operating time, grab the latest forecast with\n",
+    "    # publish_time <= operating_time - 24 hours\n",
+    "    \"publish_time\": \"latest_before:-24 hours\",\n",
     "    \"timezone\": \"market\",\n",
     "    \"api_key\": api_key,\n",
     "    \"return_format\": \"csv\",\n",
@@ -323,14 +325,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "8e44c3a2-15c8-4a16-a136-62a5b4d45523",
    "metadata": {},
    "outputs": [],
    "source": [
     "# save csv to folder\n",
     "df_solar_all.to_csv(\n",
-    "    r\"C:\\Users\\lemre\\Documents\\ERCOT_Peaker_Project\\ercot_solar_allzones_2022_2024.csv\",\n",
+    "    r\"C:\\Users\\lemre\\Documents\\ERCOT_Peaker_Project\\ercot_solar_allzones_2023_2024.csv\",\n",
     "    index=False\n",
     ")"
    ]
