--- a/src/get_actuals.ipynb
+++ b/src/get_actuals.ipynb
@@ -127,8 +127,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "37759fbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-11-26 14:40:52 - INFO - Fetching Page 1...\n",
+      "2025-11-26 14:40:52 - INFO - GET https://api.gridstatus.io/v1/datasets/ercot_load_by_weather_zone/query\n",
+      "2025-11-26 14:40:52 - INFO - Params: {'start_time': Timestamp('2025-01-01 00:00:00'), 'end_time': Timestamp('2025-09-01 00:00:00'), 'publish_time_start': None, 'publish_time_end': None, 'limit': None, 'page': 1, 'page_size': None, 'resample_frequency': None, 'resample_by': None, 'resample_function': None, 'publish_time': None, 'timezone': 'market', 'cursor': '', 'filter_column': None, 'filter_value': None, 'filter_operator': '=', 'return_format': 'json', 'json_schema': 'array-of-arrays'}\n",
+      "2025-11-26 14:40:53 - INFO - Done in 0.85 seconds. \n",
+      "2025-11-26 14:40:53 - INFO - Total number of rows: 5831\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>interval_start_local</th>\n",
+       "      <th>interval_start_utc</th>\n",
+       "      <th>interval_end_local</th>\n",
+       "      <th>interval_end_utc</th>\n",
+       "      <th>coast</th>\n",
+       "      <th>east</th>\n",
+       "      <th>far_west</th>\n",
+       "      <th>north</th>\n",
+       "      <th>north_central</th>\n",
+       "      <th>south_central</th>\n",
+       "      <th>southern</th>\n",
+       "      <th>west</th>\n",
+       "      <th>system_total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025-01-01 00:00:00-06:00</td>\n",
+       "      <td>2025-01-01 06:00:00+00:00</td>\n",
+       "      <td>2025-01-01 01:00:00-06:00</td>\n",
+       "      <td>2025-01-01 07:00:00+00:00</td>\n",
+       "      <td>10238.69</td>\n",
+       "      <td>1634.45</td>\n",
+       "      <td>7645.03</td>\n",
+       "      <td>1605.73</td>\n",
+       "      <td>12202.98</td>\n",
+       "      <td>6384.71</td>\n",
+       "      <td>3293.52</td>\n",
+       "      <td>1101.77</td>\n",
+       "      <td>44106.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-01-01 01:00:00-06:00</td>\n",
+       "      <td>2025-01-01 07:00:00+00:00</td>\n",
+       "      <td>2025-01-01 02:00:00-06:00</td>\n",
+       "      <td>2025-01-01 08:00:00+00:00</td>\n",
+       "      <td>10121.10</td>\n",
+       "      <td>1600.29</td>\n",
+       "      <td>7593.90</td>\n",
+       "      <td>1624.66</td>\n",
+       "      <td>12120.37</td>\n",
+       "      <td>6436.58</td>\n",
+       "      <td>3259.80</td>\n",
+       "      <td>1059.43</td>\n",
+       "      <td>43816.13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-01-01 02:00:00-06:00</td>\n",
+       "      <td>2025-01-01 08:00:00+00:00</td>\n",
+       "      <td>2025-01-01 03:00:00-06:00</td>\n",
+       "      <td>2025-01-01 09:00:00+00:00</td>\n",
+       "      <td>10140.17</td>\n",
+       "      <td>1576.62</td>\n",
+       "      <td>7581.00</td>\n",
+       "      <td>1616.56</td>\n",
+       "      <td>11994.06</td>\n",
+       "      <td>6466.56</td>\n",
+       "      <td>3200.95</td>\n",
+       "      <td>1058.03</td>\n",
+       "      <td>43633.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-01-01 03:00:00-06:00</td>\n",
+       "      <td>2025-01-01 09:00:00+00:00</td>\n",
+       "      <td>2025-01-01 04:00:00-06:00</td>\n",
+       "      <td>2025-01-01 10:00:00+00:00</td>\n",
+       "      <td>10171.89</td>\n",
+       "      <td>1598.36</td>\n",
+       "      <td>7403.48</td>\n",
+       "      <td>1660.17</td>\n",
+       "      <td>12178.42</td>\n",
+       "      <td>6425.03</td>\n",
+       "      <td>2985.95</td>\n",
+       "      <td>1097.81</td>\n",
+       "      <td>43521.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-01-01 04:00:00-06:00</td>\n",
+       "      <td>2025-01-01 10:00:00+00:00</td>\n",
+       "      <td>2025-01-01 05:00:00-06:00</td>\n",
+       "      <td>2025-01-01 11:00:00+00:00</td>\n",
+       "      <td>9992.42</td>\n",
+       "      <td>1628.75</td>\n",
+       "      <td>7358.83</td>\n",
+       "      <td>1640.86</td>\n",
+       "      <td>12308.32</td>\n",
+       "      <td>6385.58</td>\n",
+       "      <td>2964.56</td>\n",
+       "      <td>1114.53</td>\n",
+       "      <td>43393.86</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       interval_start_local        interval_start_utc  \\\n",
+       "0 2025-01-01 00:00:00-06:00 2025-01-01 06:00:00+00:00   \n",
+       "1 2025-01-01 01:00:00-06:00 2025-01-01 07:00:00+00:00   \n",
+       "2 2025-01-01 02:00:00-06:00 2025-01-01 08:00:00+00:00   \n",
+       "3 2025-01-01 03:00:00-06:00 2025-01-01 09:00:00+00:00   \n",
+       "4 2025-01-01 04:00:00-06:00 2025-01-01 10:00:00+00:00   \n",
+       "\n",
+       "         interval_end_local          interval_end_utc     coast     east  \\\n",
+       "0 2025-01-01 01:00:00-06:00 2025-01-01 07:00:00+00:00  10238.69  1634.45   \n",
+       "1 2025-01-01 02:00:00-06:00 2025-01-01 08:00:00+00:00  10121.10  1600.29   \n",
+       "2 2025-01-01 03:00:00-06:00 2025-01-01 09:00:00+00:00  10140.17  1576.62   \n",
+       "3 2025-01-01 04:00:00-06:00 2025-01-01 10:00:00+00:00  10171.89  1598.36   \n",
+       "4 2025-01-01 05:00:00-06:00 2025-01-01 11:00:00+00:00   9992.42  1628.75   \n",
+       "\n",
+       "   far_west    north  north_central  south_central  southern     west  \\\n",
+       "0   7645.03  1605.73       12202.98        6384.71   3293.52  1101.77   \n",
+       "1   7593.90  1624.66       12120.37        6436.58   3259.80  1059.43   \n",
+       "2   7581.00  1616.56       11994.06        6466.56   3200.95  1058.03   \n",
+       "3   7403.48  1660.17       12178.42        6425.03   2985.95  1097.81   \n",
+       "4   7358.83  1640.86       12308.32        6385.58   2964.56  1114.53   \n",
+       "\n",
+       "   system_total  \n",
+       "0      44106.88  \n",
+       "1      43816.13  \n",
+       "2      43633.94  \n",
+       "3      43521.12  \n",
+       "4      43393.86  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "from gridstatus import Ercot, Markets\n",
+    "from gridstatusio import GridStatusClient\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "# Load .env\n",
+    "load_dotenv()\n",
+    "\n",
+    "API_KEY = os.getenv(\"GRIDSTATUS_API_KEY\")\n",
+    "if API_KEY is None:\n",
+    "    raise RuntimeError(\"GRIDSTATUS_API_KEY not found in environment variables.\")\n",
+    "\n",
+    "client = GridStatusClient(api_key=API_KEY)\n",
+    "grid = Ercot()\n",
+    "QUERY_LIMIT = 100\n",
+    "\n",
+    "from gridstatusio import GridStatusClient\n",
+    "# Recommended: set GRIDSTATUS_API_KEY as an\n",
+    "# environment variable instead of hardcoding\n",
+    "client = GridStatusClient(\"46d30a9913414c0ca572ed92c9d89397\")\n",
+    "# Fetch data as pandas DataFrame\n",
+    "df = client.get_dataset(\n",
+    "  dataset=\"ercot_load_by_weather_zone\",\n",
+    "  start=\"2025-1-1\",\n",
+    "  end=\"2025-9-1\",\n",
+    "  timezone=\"market\",\n",
+    ")\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "84a1bac3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"../clean_data/hourly_load_act_test.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78dd0b61",
    "metadata": {},
    "outputs": [],
    "source": []
