--- a/src/reformat_weather_load.ipynb
+++ b/src/reformat_weather_load.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2e4c580f",
    "metadata": {},
    "outputs": [
@@ -11,55 +11,55 @@
      "output_type": "stream",
      "text": [
       "       STATION                 DATE  SOURCE  LATITUDE  LONGITUDE  ELEVATION  \\\n",
-      "0  72259003927  2021-01-01T00:00:00       4  32.89744  -97.02196      165.7   \n",
-      "1  72259003927  2021-01-01T00:53:00       7  32.89744  -97.02196      165.7   \n",
-      "2  72259003927  2021-01-01T01:24:00       7  32.89744  -97.02196      165.7   \n",
-      "3  72259003927  2021-01-01T01:51:00       6  32.89744  -97.02196      165.7   \n",
-      "4  72259003927  2021-01-01T01:53:00       7  32.89744  -97.02196      165.7   \n",
+      "0  72259003927  2025-01-01T00:00:00       4  32.89744  -97.02196      165.7   \n",
+      "1  72259003927  2025-01-01T00:53:00       4  32.89744  -97.02196      165.7   \n",
+      "2  72259003927  2025-01-01T01:53:00       4  32.89744  -97.02196      165.7   \n",
+      "3  72259003927  2025-01-01T02:53:00       4  32.89744  -97.02196      165.7   \n",
+      "4  72259003927  2025-01-01T03:00:00       4  32.89744  -97.02196      165.7   \n",
       "\n",
       "                           NAME REPORT_TYPE CALL_SIGN QUALITY_CONTROL  ...  \\\n",
       "0  DAL FTW WSCMO AIRPORT, TX US       FM-12     99999            V020  ...   \n",
-      "1  DAL FTW WSCMO AIRPORT, TX US       FM-15     KDFW             V030  ...   \n",
-      "2  DAL FTW WSCMO AIRPORT, TX US       FM-16     KDFW             V030  ...   \n",
-      "3  DAL FTW WSCMO AIRPORT, TX US       FM-16     KDFW             V030  ...   \n",
-      "4  DAL FTW WSCMO AIRPORT, TX US       FM-15     KDFW             V030  ...   \n",
+      "1  DAL FTW WSCMO AIRPORT, TX US       FM-15     99999            V020  ...   \n",
+      "2  DAL FTW WSCMO AIRPORT, TX US       FM-15     99999            V020  ...   \n",
+      "3  DAL FTW WSCMO AIRPORT, TX US       FM-15     99999            V020  ...   \n",
+      "4  DAL FTW WSCMO AIRPORT, TX US       FM-12     99999            V020  ...   \n",
       "\n",
       "  DEW_C DEW_qc SLP_hPa SLP_qc WIND_DIR_deg WIND_DIR_qc WIND_TYPE WIND_SPD_ms  \\\n",
-      "0   2.8    1.0  1002.9      1         30.0           1         N         9.3   \n",
-      "1   2.8    5.0  1001.7      5         20.0           5         N         9.3   \n",
-      "2   2.8    5.0     NaN      9         20.0           5         N         9.3   \n",
-      "3   3.0    5.0     NaN      9        360.0           5         N         3.1   \n",
-      "4   2.8    5.0  1003.2      5        350.0           5         N         3.1   \n",
+      "0   1.1      1  1019.9      1         20.0           1         N         3.6   \n",
+      "1   1.1      1  1020.1      1        360.0           1         N         2.6   \n",
+      "2   1.1      1  1020.5      1          NaN           9         C         0.0   \n",
+      "3   1.7      1  1020.9      1        360.0           1         N         2.1   \n",
+      "4   1.7      1  1020.9      1        360.0           1         N         2.1   \n",
       "\n",
       "  WIND_SPD_qc             datetime  \n",
-      "0         1.0  2021-01-01 00:00:00  \n",
-      "1         5.0  2021-01-01 00:53:00  \n",
-      "2         5.0  2021-01-01 01:24:00  \n",
-      "3         5.0  2021-01-01 01:51:00  \n",
-      "4         5.0  2021-01-01 01:53:00  \n",
+      "0           1  2025-01-01 00:00:00  \n",
+      "1           1  2025-01-01 00:53:00  \n",
+      "2           1  2025-01-01 01:53:00  \n",
+      "3           1  2025-01-01 02:53:00  \n",
+      "4           1  2025-01-01 03:00:00  \n",
       "\n",
-      "[5 rows x 118 columns]\n"
+      "[5 rows x 106 columns]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/5v/2ljsc8_n2cv62zbxy_jkx52h0000gn/T/ipykernel_30139/2193234884.py:3: DtypeWarning: Columns (22,23,24,25,26,27,36,43,44,45,56,57,58,62,91,100,103,104,105) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  weather_df = pd.read_csv('../clean_data/cleaned_DFW_weather.csv')\n"
+      "/var/folders/5v/2ljsc8_n2cv62zbxy_jkx52h0000gn/T/ipykernel_90509/723788397.py:3: DtypeWarning: Columns (18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,35,37,42,43,45,46,47,50,51,52,55,56,70,71,72,73,74,75,76,77,81,82,85,91) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  weather_df = pd.read_csv('../clean_data/cleaned_DFW_weather_2025.csv')\n"
      ]
     }
    ],
    "source": [
     "# Grab weather data from clean_data/cleaned_DFW_weather.csv\n",
     "import pandas as pd\n",
-    "weather_df = pd.read_csv('../clean_data/cleaned_DFW_weather.csv')\n",
+    "weather_df = pd.read_csv('../clean_data/cleaned_DFW_weather_2025.csv')\n",
     "print(weather_df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a13439e0",
    "metadata": {},
    "outputs": [
@@ -67,18 +67,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DatetimeIndex(['2021-01-01 00:00:00', '2021-01-01 00:53:00',\n",
-      "               '2021-01-01 01:24:00', '2021-01-01 01:51:00',\n",
-      "               '2021-01-01 01:53:00', '2021-01-01 02:18:00',\n",
-      "               '2021-01-01 02:32:00', '2021-01-01 02:43:00',\n",
-      "               '2021-01-01 02:53:00', '2021-01-01 03:00:00',\n",
+      "DatetimeIndex(['2025-01-01 00:00:00', '2025-01-01 00:53:00',\n",
+      "               '2025-01-01 01:53:00', '2025-01-01 02:53:00',\n",
+      "               '2025-01-01 03:00:00', '2025-01-01 03:53:00',\n",
+      "               '2025-01-01 04:53:00', '2025-01-01 05:53:00',\n",
+      "               '2025-01-01 05:59:00', '2025-01-01 05:59:00',\n",
       "               ...\n",
-      "               '2024-12-31 16:53:00', '2024-12-31 17:53:00',\n",
-      "               '2024-12-31 18:00:00', '2024-12-31 18:53:00',\n",
-      "               '2024-12-31 19:53:00', '2024-12-31 20:53:00',\n",
-      "               '2024-12-31 21:00:00', '2024-12-31 21:53:00',\n",
-      "               '2024-12-31 22:53:00', '2024-12-31 23:53:00'],\n",
-      "              dtype='datetime64[ns]', name='datetime', length=53854, freq=None)\n"
+      "               '2025-08-26 20:53:00', '2025-08-26 21:53:00',\n",
+      "               '2025-08-26 22:53:00', '2025-08-26 23:53:00',\n",
+      "               '2025-08-27 00:53:00', '2025-08-27 01:53:00',\n",
+      "               '2025-08-27 02:53:00', '2025-08-27 03:53:00',\n",
+      "               '2025-08-27 04:53:00', '2025-08-27 05:59:00'],\n",
+      "              dtype='datetime64[ns]', name='datetime', length=8677, freq=None)\n"
      ]
     }
    ],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "05902826",
    "metadata": {},
    "outputs": [
@@ -99,18 +99,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "STATION            0\n",
-      "DATE               0\n",
-      "SOURCE             0\n",
-      "LATITUDE           0\n",
-      "LONGITUDE          0\n",
-      "                ... \n",
-      "WIND_DIR_deg    5037\n",
-      "WIND_DIR_qc        0\n",
-      "WIND_TYPE          0\n",
-      "WIND_SPD_ms     1533\n",
-      "WIND_SPD_qc       15\n",
-      "Length: 117, dtype: int64\n"
+      "STATION           0\n",
+      "DATE              0\n",
+      "SOURCE            0\n",
+      "LATITUDE          0\n",
+      "LONGITUDE         0\n",
+      "               ... \n",
+      "WIND_DIR_deg    744\n",
+      "WIND_DIR_qc       0\n",
+      "WIND_TYPE         0\n",
+      "WIND_SPD_ms     245\n",
+      "WIND_SPD_qc       0\n",
+      "Length: 105, dtype: int64\n"
      ]
     }
    ],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "e6dc576d",
    "metadata": {},
    "outputs": [
@@ -129,29 +129,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                          STATION    SOURCE  LATITUDE  LONGITUDE  ELEVATION  \\\n",
-      "datetime                                                                      \n",
-      "2021-01-01 00:00:00  7.225900e+10  5.500000  32.89744  -97.02196      165.7   \n",
-      "2021-01-01 01:00:00  7.225900e+10  6.666667  32.89744  -97.02196      165.7   \n",
-      "2021-01-01 02:00:00  7.225900e+10  7.000000  32.89744  -97.02196      165.7   \n",
-      "2021-01-01 03:00:00  7.225900e+10  6.500000  32.89744  -97.02196      165.7   \n",
-      "2021-01-01 04:00:00  7.225900e+10  7.000000  32.89744  -97.02196      165.7   \n",
+      "                          STATION  SOURCE  LATITUDE  LONGITUDE  ELEVATION  \\\n",
+      "datetime                                                                    \n",
+      "2025-01-01 00:00:00  7.225900e+10     4.0  32.89744  -97.02196      165.7   \n",
+      "2025-01-01 01:00:00  7.225900e+10     4.0  32.89744  -97.02196      165.7   \n",
+      "2025-01-01 02:00:00  7.225900e+10     4.0  32.89744  -97.02196      165.7   \n",
+      "2025-01-01 03:00:00  7.225900e+10     4.0  32.89744  -97.02196      165.7   \n",
+      "2025-01-01 04:00:00  7.225900e+10     4.0  32.89744  -97.02196      165.7   \n",
       "\n",
-      "                     TEMP_C   TEMP_qc     DEW_C    DEW_qc  SLP_hPa    SLP_qc  \\\n",
-      "datetime                                                                       \n",
-      "2021-01-01 00:00:00    3.30  3.000000  2.800000  3.000000  1002.30  3.000000   \n",
-      "2021-01-01 01:00:00    3.20  5.000000  2.866667  5.000000  1003.20  7.666667   \n",
-      "2021-01-01 02:00:00    3.30  5.000000  3.175000  5.000000  1003.00  8.000000   \n",
-      "2021-01-01 03:00:00    3.25  4.333333  2.916667  4.333333  1003.15  7.000000   \n",
-      "2021-01-01 04:00:00    2.90  5.000000  2.900000  5.000000  1002.50  7.000000   \n",
+      "                     TEMP_C  TEMP_qc  DEW_C  DEW_qc  SLP_hPa  SLP_qc  \\\n",
+      "datetime                                                               \n",
+      "2025-01-01 00:00:00   10.30      1.0    1.1     1.0   1020.0     1.0   \n",
+      "2025-01-01 01:00:00    9.40      1.0    1.1     1.0   1020.5     1.0   \n",
+      "2025-01-01 02:00:00    8.90      1.0    1.7     1.0   1020.9     1.0   \n",
+      "2025-01-01 03:00:00    8.05      1.0    1.7     1.0   1021.4     1.0   \n",
+      "2025-01-01 04:00:00    6.70      1.0    1.1     1.0   1022.7     1.0   \n",
       "\n",
       "                     WIND_DIR_deg  WIND_DIR_qc  WIND_SPD_ms  WIND_SPD_qc  \n",
       "datetime                                                                  \n",
-      "2021-01-01 00:00:00     25.000000     3.000000     9.300000     3.000000  \n",
-      "2021-01-01 01:00:00    243.333333     5.000000     5.166667     5.000000  \n",
-      "2021-01-01 02:00:00    312.500000     5.000000     4.600000     5.000000  \n",
-      "2021-01-01 03:00:00    316.666667     4.333333     4.933333     4.333333  \n",
-      "2021-01-01 04:00:00    325.000000     5.000000     5.100000     5.000000  \n"
+      "2025-01-01 00:00:00         190.0          1.0         3.10          1.0  \n",
+      "2025-01-01 01:00:00           NaN          9.0         0.00          1.0  \n",
+      "2025-01-01 02:00:00         360.0          1.0         2.10          1.0  \n",
+      "2025-01-01 03:00:00         195.0          1.0         2.85          1.0  \n",
+      "2025-01-01 04:00:00          20.0          1.0         3.60          1.0  \n"
      ]
     }
    ],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "c6830f28",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "35319f18",
    "metadata": {},
    "outputs": [
@@ -226,93 +226,93 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2021-01-01 00:00:00</th>\n",
-       "      <td>3.30</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>2.800000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>1002.30</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>25.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>9.300000</td>\n",
-       "      <td>3.000000</td>\n",
+       "      <th>2025-01-01 00:00:00</th>\n",
+       "      <td>10.30</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1020.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.10</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-01-01 01:00:00</th>\n",
-       "      <td>3.20</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>2.866667</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>1003.20</td>\n",
-       "      <td>7.666667</td>\n",
-       "      <td>243.333333</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>5.166667</td>\n",
-       "      <td>5.000000</td>\n",
+       "      <th>2025-01-01 01:00:00</th>\n",
+       "      <td>9.40</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1020.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-01-01 02:00:00</th>\n",
-       "      <td>3.30</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>3.175000</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>1003.00</td>\n",
-       "      <td>8.000000</td>\n",
-       "      <td>312.500000</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>4.600000</td>\n",
-       "      <td>5.000000</td>\n",
+       "      <th>2025-01-01 02:00:00</th>\n",
+       "      <td>8.90</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1020.9</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-01-01 03:00:00</th>\n",
-       "      <td>3.25</td>\n",
-       "      <td>4.333333</td>\n",
-       "      <td>2.916667</td>\n",
-       "      <td>4.333333</td>\n",
-       "      <td>1003.15</td>\n",
-       "      <td>7.000000</td>\n",
-       "      <td>316.666667</td>\n",
-       "      <td>4.333333</td>\n",
-       "      <td>4.933333</td>\n",
-       "      <td>4.333333</td>\n",
+       "      <th>2025-01-01 03:00:00</th>\n",
+       "      <td>8.05</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1021.4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.85</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-01-01 04:00:00</th>\n",
-       "      <td>2.90</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>2.900000</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>1002.50</td>\n",
-       "      <td>7.000000</td>\n",
-       "      <td>325.000000</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>5.100000</td>\n",
-       "      <td>5.000000</td>\n",
+       "      <th>2025-01-01 04:00:00</th>\n",
+       "      <td>6.70</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1022.7</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.60</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     TEMP_C   TEMP_qc     DEW_C    DEW_qc  SLP_hPa    SLP_qc  \\\n",
-       "datetime                                                                       \n",
-       "2021-01-01 00:00:00    3.30  3.000000  2.800000  3.000000  1002.30  3.000000   \n",
-       "2021-01-01 01:00:00    3.20  5.000000  2.866667  5.000000  1003.20  7.666667   \n",
-       "2021-01-01 02:00:00    3.30  5.000000  3.175000  5.000000  1003.00  8.000000   \n",
-       "2021-01-01 03:00:00    3.25  4.333333  2.916667  4.333333  1003.15  7.000000   \n",
-       "2021-01-01 04:00:00    2.90  5.000000  2.900000  5.000000  1002.50  7.000000   \n",
+       "                     TEMP_C  TEMP_qc  DEW_C  DEW_qc  SLP_hPa  SLP_qc  \\\n",
+       "datetime                                                               \n",
+       "2025-01-01 00:00:00   10.30      1.0    1.1     1.0   1020.0     1.0   \n",
+       "2025-01-01 01:00:00    9.40      1.0    1.1     1.0   1020.5     1.0   \n",
+       "2025-01-01 02:00:00    8.90      1.0    1.7     1.0   1020.9     1.0   \n",
+       "2025-01-01 03:00:00    8.05      1.0    1.7     1.0   1021.4     1.0   \n",
+       "2025-01-01 04:00:00    6.70      1.0    1.1     1.0   1022.7     1.0   \n",
        "\n",
        "                     WIND_DIR_deg  WIND_DIR_qc  WIND_SPD_ms  WIND_SPD_qc  \n",
        "datetime                                                                  \n",
-       "2021-01-01 00:00:00     25.000000     3.000000     9.300000     3.000000  \n",
-       "2021-01-01 01:00:00    243.333333     5.000000     5.166667     5.000000  \n",
-       "2021-01-01 02:00:00    312.500000     5.000000     4.600000     5.000000  \n",
-       "2021-01-01 03:00:00    316.666667     4.333333     4.933333     4.333333  \n",
-       "2021-01-01 04:00:00    325.000000     5.000000     5.100000     5.000000  "
+       "2025-01-01 00:00:00         190.0          1.0         3.10          1.0  \n",
+       "2025-01-01 01:00:00           NaN          9.0         0.00          1.0  \n",
+       "2025-01-01 02:00:00         360.0          1.0         2.10          1.0  \n",
+       "2025-01-01 03:00:00         195.0          1.0         2.85          1.0  \n",
+       "2025-01-01 04:00:00          20.0          1.0         3.60          1.0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,13 +323,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "4bc9beaf",
    "metadata": {},
    "outputs": [],
    "source": [
     "# save to csv\n",
-    "weather_hourly.to_csv('../clean_data/weather_hourly.csv')"
+    "weather_hourly.to_csv('../clean_data/weather_hourly_2025.csv')"
    ]
   },
   {
